<resources>
    <string name="app_name">TCC URI</string>

    <string name="hint_login">Login</string>
    <string name="hint_profile">Profile</string>
    <string name="hint_register">Register</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_name">Brief description about you…</string>
    <string name="hint_about">Full name</string>
    <string name="hint_personal">About</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_description">Password (min 8 digits, uppercase, lowercase)</string>
    <string name="hint_course">Course</string>
    <string name="hint_select">Select…</string>
    <string name="hint_birth_date">Birth date</string>

    <string name="radio_student">Student</string>
    <string name="radio_teacher">Teacher</string>
    <string name="radio_system">System</string>

    <string name="button_login_title">Login</string>
    <string name="button_register_title">Register</string>
    <string name="button_save_title">Save</string>

    <string name="button_register_description"><u>New around here? Register</u></string>
    <string name="button_login_description"><u>Do you have account? Login</u></string>

    <string name="hint_chat">Chat</string>
    <string name="hint_update">Update</string>
    <string name="hint_archive">Archive</string>
    <string name="hint_advisor">Advisor</string>
    <string name="hint_brief">Brief description of the topic of the TCC</string>
    <string name="hint_resume">Resume</string>
    <string name="hint_title">Title</string>
    <string name="hint_tcc">TCC</string>
    <string name="hint_create">Create</string>
    <string name="hint_message">Message</string>

    <string name="no_message_available">No message available</string>

    <string name="message_email_empty">Email cannot be empty</string>
    <string name="message_class_id_empty">Class cannot be empty</string>
    <string name="message_name_empty">Name cannot be empty</string>
    <string name="message_cpf_empty">Legal document cannot be empty</string>
    <string name="message_password_empty">Password cannot be empty</string>

    <string name="message_email_invalid">Email invalid</string>
    <string name="message_name_invalid">Name invalid</string>
    <string name="message_cpf_invalid">Legal document invalid</string>
    <string name="message_password_invalid">Password invalid</string>

    <string name="library_tab_course">Course</string>
    <string name="library_tab_title">Title</string>
    <string name="library_tab_area">Area</string>
    <string name="library_search">Search</string>
</resources>